<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina6_72" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MediaViewer" customModule="CosmicView" customModuleProvider="target">
            <connections>
                <outlet property="descLabel" destination="Z2c-LZ-Ot0" id="qdh-KT-QdG"/>
                <outlet property="imageTitle" destination="jhE-uH-Em6" id="wOK-nL-Y9R"/>
                <outlet property="imageView" destination="RO7-hu-hkI" id="ife-7r-pG7"/>
                <outlet property="webPlayerView" destination="YfI-ym-Zga" id="K0y-0a-rjO"/>
                <outlet property="youTublePlayerView" destination="GdT-hR-acu" id="oUI-xX-ksu"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view contentMode="scaleToFill" id="iN0-l3-epB">
            <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Twk-eR-btt">
                    <rect key="frame" x="0.0" y="59" width="430" height="839"/>
                    <subviews>
                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RO7-hu-hkI">
                            <rect key="frame" x="16" y="0.0" width="398" height="398"/>
                            <accessibility key="accessibilityConfiguration" identifier="astronomyImage" label="Astronomy picture Of the Day">
                                <bool key="isElement" value="YES"/>
                            </accessibility>
                            <constraints>
                                <constraint firstAttribute="width" secondItem="RO7-hu-hkI" secondAttribute="height" multiplier="1:1" id="2Ff-pJ-KEd"/>
                                <constraint firstAttribute="width" secondItem="RO7-hu-hkI" secondAttribute="height" multiplier="2:1" id="FjY-CM-vbz"/>
                                <constraint firstAttribute="width" secondItem="RO7-hu-hkI" secondAttribute="height" multiplier="5:1" id="bKA-jK-Mx9"/>
                            </constraints>
                            <variation key="default">
                                <mask key="constraints">
                                    <exclude reference="2Ff-pJ-KEd"/>
                                    <exclude reference="FjY-CM-vbz"/>
                                    <exclude reference="bKA-jK-Mx9"/>
                                </mask>
                            </variation>
                            <variation key="heightClass=compact">
                                <mask key="constraints">
                                    <include reference="bKA-jK-Mx9"/>
                                </mask>
                            </variation>
                            <variation key="heightClass=regular-widthClass=compact">
                                <mask key="constraints">
                                    <include reference="2Ff-pJ-KEd"/>
                                </mask>
                            </variation>
                            <variation key="heightClass=regular-widthClass=regular">
                                <mask key="constraints">
                                    <include reference="FjY-CM-vbz"/>
                                </mask>
                            </variation>
                        </imageView>
                        <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YfI-ym-Zga">
                            <rect key="frame" x="0.0" y="0.0" width="430" height="398"/>
                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        </view>
                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GdT-hR-acu" customClass="YTPlayerView">
                            <rect key="frame" x="0.0" y="0.0" width="430" height="398"/>
                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <accessibility key="accessibilityConfiguration" identifier="youTubePlayerView">
                                <bool key="isElement" value="YES"/>
                            </accessibility>
                        </view>
                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jhE-uH-Em6">
                            <rect key="frame" x="16" y="414" width="398" height="0.0"/>
                            <accessibility key="accessibilityConfiguration" identifier="mediaTitle"/>
                            <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                            <nil key="textColor"/>
                            <nil key="highlightedColor"/>
                        </label>
                        <label opaque="NO" userInteractionEnabled="NO" contentMode="TopLeft" horizontalHuggingPriority="251" verticalHuggingPriority="249" text="" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z2c-LZ-Ot0">
                            <rect key="frame" x="16" y="430" width="398" height="0.0"/>
                            <accessibility key="accessibilityConfiguration" identifier="apodDescription"/>
                            <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                            <nil key="textColor"/>
                            <nil key="highlightedColor"/>
                        </label>
                    </subviews>
                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                    <constraints>
                        <constraint firstAttribute="trailing" secondItem="Z2c-LZ-Ot0" secondAttribute="trailing" constant="16" id="4Ii-pM-k52"/>
                        <constraint firstItem="YfI-ym-Zga" firstAttribute="top" secondItem="Twk-eR-btt" secondAttribute="top" id="DBZ-BF-LQy"/>
                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Z2c-LZ-Ot0" secondAttribute="bottom" id="E4K-2G-EPA"/>
                        <constraint firstItem="YfI-ym-Zga" firstAttribute="leading" secondItem="Twk-eR-btt" secondAttribute="leading" id="Px0-L6-7Q5"/>
                        <constraint firstItem="GdT-hR-acu" firstAttribute="top" secondItem="Twk-eR-btt" secondAttribute="top" id="Tjb-nq-s6P"/>
                        <constraint firstItem="Z2c-LZ-Ot0" firstAttribute="leading" secondItem="Twk-eR-btt" secondAttribute="leading" constant="16" id="Voe-97-BPr"/>
                        <constraint firstItem="jhE-uH-Em6" firstAttribute="leading" secondItem="Twk-eR-btt" secondAttribute="leading" constant="16" id="awI-Nv-7tT"/>
                        <constraint firstItem="jhE-uH-Em6" firstAttribute="top" secondItem="RO7-hu-hkI" secondAttribute="bottom" constant="16" id="bYv-eg-gMj"/>
                        <constraint firstItem="RO7-hu-hkI" firstAttribute="top" secondItem="Twk-eR-btt" secondAttribute="top" id="cWZ-Kp-L7c"/>
                        <constraint firstItem="RO7-hu-hkI" firstAttribute="leading" secondItem="Twk-eR-btt" secondAttribute="leading" constant="16" id="fQj-N8-gkx"/>
                        <constraint firstItem="jhE-uH-Em6" firstAttribute="top" secondItem="YfI-ym-Zga" secondAttribute="bottom" constant="16" id="fec-hV-jCI"/>
                        <constraint firstItem="Z2c-LZ-Ot0" firstAttribute="top" secondItem="jhE-uH-Em6" secondAttribute="bottom" constant="16" id="fwi-AX-FXp"/>
                        <constraint firstAttribute="trailing" secondItem="RO7-hu-hkI" secondAttribute="trailing" constant="16" id="i9B-P0-gjW"/>
                        <constraint firstAttribute="trailing" secondItem="jhE-uH-Em6" secondAttribute="trailing" constant="16" id="ij2-5L-QkG"/>
                        <constraint firstItem="GdT-hR-acu" firstAttribute="leading" secondItem="Twk-eR-btt" secondAttribute="leading" id="kqB-iy-Ujl"/>
                        <constraint firstAttribute="trailing" secondItem="GdT-hR-acu" secondAttribute="trailing" id="nRF-8F-5Np"/>
                        <constraint firstAttribute="trailing" secondItem="YfI-ym-Zga" secondAttribute="trailing" id="rPi-wN-nzC"/>
                        <constraint firstItem="jhE-uH-Em6" firstAttribute="top" secondItem="GdT-hR-acu" secondAttribute="bottom" constant="16" id="t9g-gm-iBr"/>
                    </constraints>
                </view>
            </subviews>
            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
            <constraints>
                <constraint firstItem="vUN-kp-3ea" firstAttribute="top" secondItem="Twk-eR-btt" secondAttribute="top" id="3xD-aD-ts6"/>
                <constraint firstItem="Twk-eR-btt" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="aRX-DF-5LK"/>
                <constraint firstItem="Twk-eR-btt" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="o1x-9h-SNj"/>
                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Twk-eR-btt" secondAttribute="trailing" id="ql2-pz-LU8"/>
            </constraints>
            <point key="canvasLocation" x="137" y="20"/>
        </view>
    </objects>
    <resources>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
