...
    override func viewDidLoad() {
        super.viewDidLoad()
        
        // Set the accessibility identifiers for UI elements for better accessibility support and testing.
        view.accessibilityIdentifier = "homeView"
        containerScrollView.accessibilityIdentifier = "containerScrollView"
        datePicker.accessibilityIdentifier = "astroPixDatePicker"
        
        // Configure the date picker and initiate the download of the media for a date.
        populateDatePicker()
        //fetchMediaOfTheDay()
        Task {
            await fetchAsyncMediaOfTheDay()
...
